# instrumentserver

./: .buildinfo  .gitignore  AGENTS.md  CLAUDE.md  Measurement_Mockup.py  README.html  README.md  about.html  client.py  docs_requirements.txt  dummyStation.py  dummyYoko.json  environment-docs.yml  fakeCS.py  genindex.html  index.html  msmtProtocol.md  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  server.py  server_with_dummyStation.py  setup.py  test_client.py  test_proxy.py  test_server.py
.github/workflows/: ci.yml  sphinx-docs.yml
_modules/: index.html
_modules/instrumentserver/: blueprints.html
_sources/agents/: domain.md.txt
agents/: domain.html  issue-tracker.html  triage-labels.html
api/: index.html
doc/: api.rst  conf.py  dashboard_example.py  index.rst  listenerConfig.yml  serverConfig.yml
docs/: Makefile  README.md  about.md  conf.py  index.md
docs/agents/: issue-tracker.md
docs/api/: index.md
docs/examples/: index.md
docs/first_steps/: basic_server_setup.md  first_client.md  index.md  installation.md  overview.md
docs/user_guide/: configuration.md  index.md  instrumentmonitoring.md  listenerConfig.yml
doctrees/html/: README.doctree  about.doctree  environment.pickle  index.doctree
examples/: index.html
first_steps/: index.html  overview.html
instrumentGUI/: GUIpackage.py  __init__.py  generators.py  instrJson.json  jsonProcess.py  loggingWindow.py  plotWindow.py  projectCard.json  sweepVar.py  test.py  testGUI.py
instrumentGUI/gui/: generators.py
instrumentGUI/pkg/: hatCore.py  hatWidgets.py
instrument_mocker/: dummy_gennerator.py
instrumentserver/: __init__.py  apps.py  base.py  blueprints.py  client.py  config.py  helpers.py  init_client.py  interpreter.py  interpreters.py  log.py  param_manager.py  params.py  proxy.py  resource.py  resource.qrc  serialize.py  server.py
instrumentserver/client/: Suscriber.py  __init__.py  application.py  core.py  proxy.py
instrumentserver/config/: devices.json
instrumentserver/dashboard/: __init__.py  config.py  core.py  dashboard.py  logger.py  logger_dashboard_startup.py  new_logger.py  startupconfig_draft.py
instrumentserver/dashboard_grafana-docker_deployment/: docker-compose.yml  grafana.ini
instrumentserver/deployment/: .env.influxdb2-admin-password  .env.influxdb2-admin-username  README.md  dashboard.json  docker-compose.yml
instrumentserver/gui/: __init__.py  base_instrument.py  instruments.py  misc.py  parameters.py
instrumentserver/monitoring/: listener.py  test.py
instrumentserver/schemas/: instruction_dict.json
instrumentserver/server/: __init__.py  application.py  core.py  interpreter.py  pollingWorker.py
instrumentserver/testing/: create_instrument.py
mockUp/: Measurement_Mockup.py  __init__.py  fakeVNA.py  main.py  processData.py  test_initialize.py  test_msmt.py  virtualParameter.py
mockUp/demo_files/: demo_5_20_2020  msmt_testfile.py  reading_testfile.py
mockUp/hatlab_modules/: Fit_To_Joe_Theory.py  __init__.py  ddh5_test-2.ddh5  initialization.py  startup.py  testfile.py
mockUp/modified_drivers/: Agilent_ENA_5071C.py
src/instrumentserver/: __init__.py  apps.py  base.py  blueprints.py  config.py  helpers.py  log.py  params.py  resource.py  resource.qrc  serialize.py
test/: dummy_server.py  test_gui.py  test_pm_gui.py
test/client_workingdir/: init_client.py  parameters.json
test/notebooks/: Autoupdate.ipynb  Prototype the ParamManager.ipynb  Run the station server from a notebook.ipynb
user_guide/: configuration.html  index.html  instrumentmonitoring.html
(+87 files in other folders)
